# tiny_chess

./: .gitmodules  CMakeLists.txt
src/: board.cpp  board.h  library_unicode.js  main.cpp  stockfish.cpp  tiny_chess_shell.html  ui.cpp  ui.h
